--- a/blankos-website/styles/globals.css
+++ b/blankos-website/styles/globals.css
@@ -35,3 +35,8 @@ a {
 .fc-col-header, thead, th  {
   min-width: 100%;
 }
+
+.fc-scroller-harness, .fc-scroller, .fc-daygrid-body, .fc-scrollgrid-sync-table {
+  height: 100% !important;
+  z-index: 1;
+}
