--- a/blankos-website/styles/globals.css
+++ b/blankos-website/styles/globals.css
@@ -27,6 +27,11 @@ a {
 
 .fc {
   transform: scale(0.9);
+  position: absolute;
+  right: 50px;
+  top: 50px;
+  min-width: 50%;
+  height: auto;
 }
 
 .fc-daygrid-body, .fc-timegrid-body, table {
@@ -39,4 +44,15 @@ a {
 .fc-scroller-harness, .fc-scroller, .fc-daygrid-body, .fc-scrollgrid-sync-table {
   height: 100% !important;
   z-index: 1;
+}
+
+.fc-theme-standard .fc-popover-header {
+  background:rgb(37, 37, 37) !important;
+  color: rgb(33, 223, 16) !important;
+}
+.fc-h-event .fc-event-title-container {
+  background:rgb(33, 223, 16) !important;
+  color: rgb(107, 20, 8) !important;
+  font-weight: bold;
+  text-align: center;
 }
