--- a/blankos-website/styles/globals.css
+++ b/blankos-website/styles/globals.css
@@ -6,6 +6,14 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+html {
+  color-scheme: dark;
+}
+body {
+  color: white;
+  background: rgb(37, 37, 37);
+}
+
 a {
   color: inherit;
   text-decoration: none;
