--- a/blankos-website/styles/globals.css
+++ b/blankos-website/styles/globals.css
@@ -101,13 +101,15 @@ a {
 @media only screen and (max-width: 1000px) {
   .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+    overflow: hidden;
   }
 
   .left-copy-container {
     width: 95% !important;
     max-height: 60% !important;
     min-height: 20% !important;
+    margin-top: 1%;
   }
   .left-copy {
     padding: 0 3% 0 2%;
